--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "icon":"",
   "scripts": {
     "start": "electron main.js",
-    "build": " electron-packager . hands --platform=win32 --arch=x64"
+    "build": "electron-packager . hands"
   },
   "keywords": [],
   "author": "",
